--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "lint": "eslint .",
     "format-write": "prettier --write .",
-    "format-check": "prettier --check ."
+    "format-check": "prettier --check .",
+    "test": "npx mocha ./"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "chalk": "^5.3.0",
+    "mocha": "^10.8.2",
     "npm-check-updates": "^17.1.11",
     "prettier": "^3.4.1",
     "random-words": "^2.0.1"
